# aiffelthon_sigenie

./: .env_sample  .gitignore  README.md  requirements.txt
aiffel_gru/ksy974498/stream_app/: Dockerfile  README.md  ch1.py  ch2.py  main.py  pyproject.toml
aiffel_gru/ksy974498/stream_app/common/: models.py  vectorstore.py
sigenie/: .gitignore  README.md  json_bkg.py  json_bl.py  json_si.py  main.py  processed_bkg_files.json  processed_si_files.json  pyproject.toml  search_booking.py  search_si.py
sigenie/dataset_generation/bkg_sample/: bkg_CHERRY202409239128.json  bkg_CHERRY202409239136.json
sigenie/dataset_generation/si_sample/: si_CHERRY202409239130.json  si_CHERRY202409239131.json  si_CHERRY202409239135.json  si_CHERRY202409239201.json
sigenie/app/: __init__.py  json_bl.py  search_compliance.py  search_compliance_query_exp.py  search_si.py
sigenie/bkg/: bkg_CHERRY202409073993.json  bkg_CHERRY202409094536.json  bkg_CHERRY202409112707.json  bkg_CHERRY202409119664.json  bkg_CHERRY202409121913.json  bkg_CHERRY202409137854.json  bkg_CHERRY202409143436.json  bkg_CHERRY202409144862.json  bkg_CHERRY202409151264.json  bkg_CHERRY202409156984.json  bkg_CHERRY202409162579.json  bkg_CHERRY202409163718.json  bkg_CHERRY202409164639.json  bkg_CHERRY202409164744.json  bkg_CHERRY202409168312.json  bkg_CHERRY202409174882.json  bkg_CHERRY202409177128.json  bkg_CHERRY202409178260.json  bkg_CHERRY202409188978.json  bkg_CHERRY202409189600.json  bkg_CHERRY202409192575.json  bkg_CHERRY202409195619.json  bkg_CHERRY202409199956.json  bkg_CHERRY202409201735.json  bkg_CHERRY202409204820.json  bkg_CHERRY202409207257.json  bkg_CHERRY202409215529.json  bkg_CHERRY202409216495.json  bkg_CHERRY202409219963.json  bkg_CHERRY202409221593.json  bkg_CHERRY202409223645.json  bkg_CHERRY202409224405.json  bkg_CHERRY202409231337.json  bkg_CHERRY202409232139.json  bkg_CHERRY202409234372.json  bkg_CHERRY202409234531.json  bkg_CHERRY202409237706.json  bkg_CHERRY202409239128.json  bkg_CHERRY202409239129.json  bkg_CHERRY202409239131.json  (+1214 more)
sigenie/dataset/bkg/: bkg_CHERRY202409072244.json  bkg_CHERRY202409142417.json  bkg_CHERRY202409182260.json  bkg_CHERRY202409183825.json  bkg_CHERRY202409202787.json  bkg_CHERRY202409206168.json  bkg_CHERRY202409206312.json  bkg_CHERRY202409207307.json  bkg_CHERRY202409211246.json  bkg_CHERRY202409227454.json  bkg_CHERRY202409239130.json  bkg_CHERRY202409239134.json  bkg_CHERRY202409239135.json  bkg_CHERRY202409268213.json  bkg_CHERRY202409271862.json  bkg_CHERRY202409272758.json  bkg_CHERRY202409281320.json  bkg_CHERRY202409283665.json  bkg_CHERRY202409286678.json  bkg_CHERRY202409291241.json  bkg_CHERRY202409292279.json  bkg_CHERRY202409293776.json  bkg_CHERRY202409293864.json  bkg_CHERRY202409299229.json  bkg_CHERRY202410013107.json  bkg_CHERRY202410013658.json  bkg_CHERRY202410014271.json  bkg_CHERRY202410021313.json  bkg_CHERRY202410028974.json  bkg_CHERRY202410036540.json  bkg_CHERRY202410044402.json  bkg_CHERRY202410045202.json  bkg_CHERRY202410051984.json  bkg_CHERRY202410056148.json  bkg_CHERRY202410064293.json  bkg_CHERRY202410064621.json  bkg_CHERRY202410067043.json  bkg_CHERRY202410068038.json  bkg_CHERRY202410068411.json  bkg_CHERRY202410072074.json  (+639 more)
sigenie/dataset/si/: si_CHERRY202409075029.json  si_CHERRY202409102372.json  si_CHERRY202409136369.json  si_CHERRY202409144403.json  si_CHERRY202409144862.json  si_CHERRY202409163370.json  si_CHERRY202409164339.json  si_CHERRY202409173184.json  si_CHERRY202409175456.json  si_CHERRY202409179749.json  si_CHERRY202409199956.json  si_CHERRY202409207260.json  si_CHERRY202409212827.json  si_CHERRY202409233640.json  si_CHERRY202409235275.json  si_CHERRY202409237706.json  si_CHERRY202409239133.json  si_CHERRY202409241358.json  si_CHERRY202409245346.json  si_CHERRY202409253223.json  si_CHERRY202409255341.json  si_CHERRY202409263383.json  si_CHERRY202409266993.json  si_CHERRY202409272758.json  si_CHERRY202409277548.json  si_CHERRY202409277995.json  si_CHERRY202409278199.json  si_CHERRY202409281302.json  si_CHERRY202409283665.json  si_CHERRY202409285386.json  si_CHERRY202409297763.json  si_CHERRY202409298528.json  si_CHERRY202409304328.json  si_CHERRY202409304951.json  si_CHERRY202409307060.json  si_CHERRY202410014019.json  si_CHERRY202410014584.json  si_CHERRY202410023648.json  si_CHERRY202410025657.json  si_CHERRY202410029671.json  (+661 more)
sigenie/si/: si_CHERRY202409072244.json  si_CHERRY202409077289.json  si_CHERRY202409097544.json  si_CHERRY202409105877.json  si_CHERRY202409107402.json  si_CHERRY202409108730.json  si_CHERRY202409116503.json  si_CHERRY202409119091200.json  si_CHERRY202409119664.json  si_CHERRY202409121913.json  si_CHERRY202409123500.json  si_CHERRY202409123539.json  si_CHERRY202409124319.json  si_CHERRY202409125568.json  si_CHERRY202409128909.json  si_CHERRY202409134285.json  si_CHERRY202409134489.json  si_CHERRY202409134546.json  si_CHERRY202409135231.json  si_CHERRY202409135429.json  si_CHERRY202409135932.json  si_CHERRY202409136369.json  si_CHERRY202409137854.json  si_CHERRY202409138935.json  si_CHERRY202409139839.json  si_CHERRY202409141490.json  si_CHERRY202409142171.json  si_CHERRY202409143436.json  si_CHERRY202409148525.json  si_CHERRY202409154600.json  si_CHERRY202409154785.json  si_CHERRY202409155226.json  si_CHERRY202409155340.json  si_CHERRY202409155992.json  si_CHERRY202409156381.json  si_CHERRY202409158412.json  si_CHERRY202409158462.json  si_CHERRY202409158953.json  si_CHERRY202409159890.json  si_CHERRY202409164238.json  (+1532 more)
sigenie/vector/compliance_faiss_index/: index.faiss  index.pkl  last_update.txt
sigenie/vector/si_faiss_index/: last_update.txt
(+18174 files in other folders)
