[tool.poetry]
name = "sigenie"
version = "0.1"
description = "Sigenie for aifflethon project"
authors = ["seongyeon1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
ai21 = "^2.15.1"
ai21-tokenizer = "^0.12.0"
aiohappyeyeballs = "^2.4.3"
aiohttp = "^3.10.10"
aiosignal = "^1.3.1"
altair = "^5.4.1"
annotated-types = "^0.7.0"
anthropic = "^0.36.0"
anyio = "^4.6.2.post1"
appnope = "^0.1.4"
asttokens = "^2.4.1"
attrs = "^24.2.0"
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.3"
blinker = "^1.8.2"
bs4 = "^0.0.2"
cachetools = "^5.5.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
coloredlogs = "^15.0.1"
comm = "^0.2.2"
contourpy = "^1.3.0"
cryptography = "^43.0.1"
cycler = "^0.12.1"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.7"
decorator = "^5.1.1"
deepdiff = "^8.0.1"
defusedxml = "^0.7.1"
distro = "^1.9.0"
dnspython = "^2.7.0"
emoji = "^2.14.0"
executing = "^2.1.0"
faiss-cpu = "^1.9.0"
fastapi = "^0.115.2"
filelock = "^3.16.1"
filetype = "^1.2.0"
flatbuffers = "^24.3.25"
fonttools = "^4.54.1"
frozenlist = "^1.4.1"
fsspec = "^2024.9.0"
gitdb = "^4.0.11"
gitpython = "^3.1.43"
google-ai-generativelanguage = "^0.6.10"
google-api-core = "^2.21.0"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"
google-auth-httplib2 = "^0.2.0"
google-generativeai = "^0.8.3"
googleapis-common-protos = "^1.65.0"
graphviz = "^0.20.3"
groq = "^0.11.0"
grpcio = "^1.66.2"
grpcio-status = "^1.66.2"
h11 = "^0.14.0"
httpcore = "^1.0.6"
httplib2 = "^0.22.0"
httpx = "^0.27.2"
huggingface-hub = "^0.25.2"
humanfriendly = "^10.0"
idna = "^3.10"
ipykernel = "^6.29.5"
ipython = "^8.28.0"
jedi = "^0.19.1"
jinja2 = "^3.1.4"
jiter = "^0.6.1"
joblib = "^1.4.2"
jsonpatch = "^1.33"
jsonpath-python = "^1.0.6"
jsonpickle = "^3.3.0"
jsonpointer = "^3.0.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
kiwisolver = "^1.4.7"
langchain = "^0.3.3"
langchain-ai21 = "^0.1.9"
langchain-anthropic = "^0.2.3"
langchain-cerebras = "^0.3.0"
langchain-community = "^0.3.2"
langchain-core = "^0.3.10"
langchain-experimental = "^0.3.2"
langchain-google-genai = "^2.0.1"
langchain-groq = "^0.2.0"
langchain-openai = "^0.2.2"
langchain-text-splitters = "^0.3.0"
langdetect = "^1.0.9"
langgraph = "^0.2.37"
langgraph-checkpoint = "^2.0.1"
langsmith = "^0.1.135"
lxml = "^5.3.0"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.1"
marshmallow = "^3.22.0"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
mpmath = "^1.3.0"
msgpack = "^1.1.0"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
narwhals = "^1.9.3"
neo4j = "^5.25.0"
nest-asyncio = "^1.6.0"
networkx = "^3.4.1"
nltk = "^3.9.1"
olefile = "^0.47"
onnxruntime = "^1.19.2"
openai = "^1.51.2"
opencv-python = "^4.10.0.84"
orjson = "^3.10.7"
packaging = "^24.1"
pandas = "^2.2.3"
parso = "^0.8.4"
pdfminer = "^20191125"
pdfminer-six = "^20240706"
pexpect = "^4.9.0"
pillow = "^10.4.0"
platformdirs = "^4.3.6"
prompt-toolkit = "^3.0.48"
proto-plus = "^1.24.0"
protobuf = "^5.28.2"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pyarrow = "^17.0.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pyclipper = "^1.3.0.post5"
pycparser = "^2.22"
pycryptodome = "^3.21.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pydeck = "^0.9.1"
pygments = "^2.18.0"
pymongo = "^4.10.1"
pymupdf = "^1.24.11"
pyparsing = "^3.2.0"
pypdf = "^5.0.1"
pypdf2 = "^3.0.1"
pypdfium2 = "^4.30.0"
python-dotenv = "^1.0.1"
python-iso639 = "^2024.4.27"
python-magic = "^0.4.27"
python-oxmsg = "^0.0.1"
pytz = "^2024.2"
pyvis = "^0.3.2"
pyyaml = "^6.0.2"
pyzmq = "^26.2.0"
rapidfuzz = "^3.10.0"
referencing = "^0.35.1"
regex = "^2024.9.11"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
rich = "^13.9.2"
rpds-py = "^0.20.0"
rsa = "^4.9"
sentencepiece = "^0.2.0"
shapely = "^2.0.6"
six = "^1.16.0"
smmap = "^5.0.1"
sniffio = "^1.3.1"
soupsieve = "^2.6"
sqlalchemy = "^2.0.35"
stack-data = "^0.6.3"
starlette = "^0.39.2"
streamlit = "^1.39.0"
sympy = "^1.13.3"
tabulate = "^0.9.0"
tavily-python = "^0.5.0"
tiktoken = "^0.8.0"
tokenizers = "^0.20.1"
toml = "^0.10.2"
tornado = "^6.4.1"
tqdm = "^4.66.5"
traitlets = "^5.14.3"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.3"
uvicorn = "^0.31.1"
wcwidth = "^0.2.13"
wrapt = "^1.16.0"
yarl = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
